# dentistry-ekb-hack

./: .gitignore  Dockerfile  README.md  cavity_detection_yolov4.ipynb  cavity_yolo_inference.ipynb  cavity_yolov4_inference.ipynb  preds.csv  pyproject.toml
app/: .flake8  .gitignore  app.py  index.html  package.json  pyproject.toml  style.css  vite.config.js
app/.streamlit/: config.toml
app/backend/: settings.py  urls.py
app/backend/api/: admin.py  apps.py  models.py  serializers.py  views.py
app/backend/api/migrations/: 0001_initial.py  0002_delete_telegramuser.py  0003_initial.py  0004_uploadedimage_result.py  0005_uploadedimage_image_processed.py  0006_remove_uploadedimage_image_processed.py  0007_dentistadvice_uploadedimage_gen_time_and_more.py  0008_alter_uploadedimage_options_uploadedimage_filename.py  0009_dentistadvice_text.py
app/backend/api/ml/: cavity-yolo1.cfg  detect.py
app/src/: App.vue  api.js  main.js
app/src/assets/styles/: base.css
app/src/components/: Advice.vue  AdviceCard.vue  AtkNavbar.vue  DropZone.vue  HistoryCard.vue  Home.vue  Result.vue  TelegramLogin.vue  Uploads.vue
app/src/router/: index.js  utils.js
app/src/store/: index.js
app/src/store/modules/: auth.js
app/stlib/: advice.py  analyze.py
